fix some spacing issues with the illustration

--- a/src/sass/globals/_default.scss
+++ b/src/sass/globals/_default.scss
@@ -15,8 +15,9 @@ body {
 
 img {
     display: block;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 button {
