--- a/src/sass/globals/_mediaQueries.scss
+++ b/src/sass/globals/_mediaQueries.scss
@@ -9,16 +9,13 @@
         display: flex;
         flex-direction: row-reverse;
         border-radius: 15px;
+        align-items: center;
+        width: 80%;
+        margin-inline: auto;
     }
 
-    .image-container {
+    .illustration-container img {
+        height: inherit;
         padding: 1em;
-    
-        img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
     }
 }
