--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,13 +7,7 @@ body {
 }
 
 .sign-up-container {
-    max-width: 724px;
-    width: 100%;
     background-color: white;
-}
-
-.content-container {
-    padding-block: 1.8em;
 }
 
 .content {
